--- a/app/src/main/res/layout/catatan_list.xml
+++ b/app/src/main/res/layout/catatan_list.xml
@@ -1,11 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black">
+    android:layout_height="match_parent">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/list_view_matkul"></ListView>
-
+        android:id="@+id/list_view_catatan"
+        android:background="@color/colorPrimaryDark"></ListView>
 </RelativeLayout>
