--- a/app/src/main/res/layout/list_file_download.xml
+++ b/app/src/main/res/layout/list_file_download.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="68dp"
+    android:layout_height="80dp"
     >
 
     <android.support.v7.widget.CardView
@@ -17,17 +17,17 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark">
+            android:background="@color/black">
 
             <ImageView
                 android:id="@+id/iv_image"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:src="@drawable/clipboard">
+                android:src="@drawable/like">
             </ImageView>
 
             <TextView
-                android:id="@+id/tv_text"
+                android:id="@+id/matkul_file_simpan"
                 android:text="Agama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,10 +40,10 @@
             </TextView>
 
             <TextView
-                android:id="@+id/total_catatan"
+                android:id="@+id/nama_file_simpan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12 Agustus 2016"
+                android:text="By Septiawan Aji"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
