--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
-        android:src="@drawable/boy"
+        android:src="@drawable/kemon"
         android:layout_marginTop="37dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
